--- a/views/product_category_view.xml
+++ b/views/product_category_view.xml
@@ -1,23 +1,23 @@
 <openerp>
-	<data>
-		<record model="ir.ui.view" id="product_category_form_inherit">
-			<field name="name">product.category.common.form.inherit</field>
-			<field name="model">product.category</field>
-			<field name="inherit_id" ref="product.product_category_form_view"/>
-			<field name="arch" type="xml">
-				<xpath expr="//div[@class='oe_title']" position="after">
-					<group>
-						<group name="conversion_group" col="1">
-							<field name="product_conversion_ids">
-								<tree>
-									<field name="conversion"/>
-									<field name="uom_id"/>
-								</tree>
-							</field>
-						</group>
+<data>
+	<record model="ir.ui.view" id="product_category_form_conversion_inherit">
+		<field name="name">product.category.common.form.inherit</field>
+		<field name="model">product.category</field>
+		<field name="inherit_id" ref="product.product_category_form_view"/>
+		<field name="arch" type="xml">
+			<xpath expr="//div[@class='oe_title']" position="after">
+				<group>
+					<group name="conversion_group" col="1">
+						<field name="product_conversion_ids">
+							<tree create="false" delete="false" editable="false">
+								<field name="conversion"/>
+								<field name="uom_id"/>
+							</tree>
+						</field>
 					</group>
-				</xpath>
-			</field>
-		</record>
-	</data>
+				</group>
+			</xpath>
+		</field>
+	</record>
+</data>
 </openerp>
