--- a/views/conversion_view.xml
+++ b/views/conversion_view.xml
@@ -7,25 +7,25 @@
 			<field name="arch" type="xml">
 				<form>
 					<group>
-						<field name="product_category_id"/>
-						<field name="product_id"/>
-						<field name="conversion"/>
-						<field name="uom_id"/>
 						<field name="applied_to"/>
+						<field name="product_category_id" attrs="{'required':[('applied_to','=','category')]}"/>
+						<field name="product_id" attrs="{'required':[('applied_to','=','product')]}"/>
+						<field name="uom_id"/>
+						<field name="conversion"/>
 					</group>
 				</form>
 			</field>
 		</record>
 		<record id="conversion_product_conversion_tree" model="ir.ui.view">
-			<field name="name">>conversion.product.conversion.tree</field>
+			<field name="name">conversion.product.conversion.tree</field>
 			<field name="model">product.conversion</field>
 			<field name="arch" type="xml">
 				<tree editable='bottom'>
-					<field name="product_category_id" widget="float_time"/>
-					<field name="product_id"/>
-					<field name="conversion"/>
-					<field name="uom_id"/>
 					<field name="applied_to"/>
+					<field name="product_category_id" attrs="{'required':[('applied_to','=','category')]}"/>
+					<field name="product_id" attrs="{'required':[('applied_to','=','product')]}"/>
+					<field name="uom_id"/>
+					<field name="conversion"/>
 				</tree>
 			</field>
 		</record>
