--- a/views/purchase_view.xml
+++ b/views/purchase_view.xml
@@ -9,7 +9,7 @@
 					<attribute name="invisible">True</attribute>
 				</field>
 				<field name="product_id" position="attributes">
-					<attribute name="on_change">onchange_product_id(parent.pricelist_id, product_id, 0, False,
+					<attribute name="on_change">onchange_product_id(parent.pricelist_id, product_id, product_qty, product_uom,
 						parent.partner_id, parent.date_order, parent.fiscal_position, date_planned, False, False,
 						parent.state, context)</attribute>
 				</field>
