--- a/views/sale_view.xml
+++ b/views/sale_view.xml
@@ -3,17 +3,11 @@
 		<record model="ir.ui.view" id="sale_order_form_custom_conversion_inherit">
 			<field name="name">sale.order.form.custom_conversion_inherit</field>
 			<field name="model">sale.order</field>
-			<field name="inherit_id" ref="sale_stock.view_order_form_inherit"/>
+			<field name="inherit_id" ref="sale.view_order_form"/>
 			<field name="arch" type="xml">
-				<!--<field name="product_id" position="attributes">-->
-					<!--<attribute name="on_change">product_id_change_with_wh(parent.pricelist_id,product_id,product_uom_qty,-->
-						<!--product_uom,product_uos_qty,False,name,parent.partner_id, False, True, parent.date_order, product_packaging,-->
-						<!--parent.fiscal_position, False, parent.warehouse_id, context)</attribute>-->
-				<!--</field>-->
-				<field name="price_unit" position="attributes">
-					<attribute name="on_change">onchange_order_line(product_qty, price_unit, product_uom, product_id)</attribute>
-				</field>
-
+				<xpath expr="/form/sheet/notebook/page[1]/field[@name='order_line']/tree/field[@name='price_unit']" position="attributes">
+					<attribute name="on_change">onchange_order_line(product_uom_qty, price_unit, product_uom, product_id)</attribute>
+				</xpath>
 			</field>
 		</record>
 	</data>
