--- a/views/sale_view.xml
+++ b/views/sale_view.xml
@@ -1,27 +1,27 @@
 <openerp>
 	<data>
-		<record model="ir.ui.view" id="sale_order_form_custom_conversion_inherit">
-			<field name="name">sale.order.form.custom_conversion_inherit</field>
-			<field name="model">sale.order</field>
-			<field name="inherit_id" ref="sale.view_order_form"/>
-			<field name="arch" type="xml">
-				<xpath expr="/form/sheet/notebook/page[1]/field[@name='order_line']/tree/field[@name='price_unit']" position="attributes">
-					<attribute name="on_change">onchange_order_line(product_uom_qty, price_unit, product_uom, product_id)</attribute>
-				</xpath>
-			</field>
-		</record>
+		<!--<record model="ir.ui.view" id="sale_order_form_custom_conversion_inherit">-->
+			<!--<field name="name">sale.order.form.custom_conversion_inherit</field>-->
+			<!--<field name="model">sale.order</field>-->
+			<!--<field name="inherit_id" ref="sale.view_order_form"/>-->
+			<!--<field name="arch" type="xml">-->
+				<!--<xpath expr="/form/sheet/notebook/page[1]/field[@name='order_line']/tree/field[@name='price_unit']" position="attributes">-->
+					<!--<attribute name="on_change">onchange_order_line(product_uom_qty, price_unit, product_uom, product_id)</attribute>-->
+				<!--</xpath>-->
+			<!--</field>-->
+		<!--</record>-->
 
-		<record model="ir.ui.view" id="sale_stock_form_custom_conversion_inherit">
-			<field name="name">sale.stock.form.custom_conversion_inherit</field>
-			<field name="model">sale.order</field>
-			<field name="inherit_id" ref="sale_stock.view_order_form_inherit"/>
-			<field name="arch" type="xml">
-				<xpath expr="//field[@name='order_line']/tree//field[@name='product_uom_qty']" position="replace">
-					<field context="{'partner_id':parent.partner_id, 'quantity':product_uom_qty, 'pricelist':parent.pricelist_id, 'uom':product_uom, 'company_id': parent.company_id}"
-							name="product_uom_qty"
-							on_change="onchange_product_uom_qty(parent.pricelist_id,product_id,product_uom_qty,product_uom,product_uos_qty,False,name,parent.partner_id, False, False, parent.date_order, product_packaging, parent.fiscal_position, True, parent.warehouse_id, price_unit,context)"/>
-				</xpath>
-			</field>
-		</record>
+		<!--<record model="ir.ui.view" id="sale_stock_form_custom_conversion_inherit">-->
+			<!--<field name="name">sale.stock.form.custom_conversion_inherit</field>-->
+			<!--<field name="model">sale.order</field>-->
+			<!--<field name="inherit_id" ref="sale_stock.view_order_form_inherit"/>-->
+			<!--<field name="arch" type="xml">-->
+				<!--<xpath expr="//field[@name='order_line']/tree//field[@name='product_uom_qty']" position="replace">-->
+					<!--<field context="{'partner_id':parent.partner_id, 'quantity':product_uom_qty, 'pricelist':parent.pricelist_id, 'uom':product_uom, 'company_id': parent.company_id}"-->
+							<!--name="product_uom_qty"-->
+							<!--on_change="onchange_product_uom_qty(parent.pricelist_id,product_id,product_uom_qty,product_uom,product_uos_qty,False,name,parent.partner_id, False, False, parent.date_order, product_packaging, parent.fiscal_position, True, parent.warehouse_id, price_unit,context)"/>-->
+				<!--</xpath>-->
+			<!--</field>-->
+		<!--</record>-->
 	</data>
 </openerp>
