--- a/views/conversion_view.xml
+++ b/views/conversion_view.xml
@@ -23,7 +23,7 @@
 				<tree editable='bottom'>
 					<field name="applied_to"/>
 					<field name="product_category_id" attrs="{'required':[('applied_to','=','category')]}"/>
-					<field name="product_id" attrs="{'required':[('applied_to','=','product')]}"/>
+					<field name="product_template_id" attrs="{'required':[('applied_to','=','product')]}"/>
 					<field name="uom_id" on_change="onchange_product_uom(uom_id)"/>
 					<field name="uom_type"/>
 					<field name="conversion"/>
