--- a/views/product_view.xml
+++ b/views/product_view.xml
@@ -19,5 +19,9 @@
 				</field>
 			</field>
 		</record>
+
+		<record id="product.product_uom_form_action" model = "ir.actions.act_window">
+			<field name = "domain">[('is_auto_create', '=', False)]</field>
+		</record>
 	</data>
 </openerp>
